--- a/XamarinApp/XamarinApp/MainPage.xaml
+++ b/XamarinApp/XamarinApp/MainPage.xaml
@@ -16,7 +16,7 @@
 
                     <Button x:Name="b1" Text="Menu Item 1" BackgroundColor="LightBlue" Clicked="Handle_Clicked"></Button>
 
-                    <Button x:Name="b2" Text="Menu Item 2" BackgroundColor="LightYellow" Clicked="Handle_Clicked2"></Button>
+                    <Button x:Name="b2" Text="Italian Recipes" BackgroundColor="LightYellow" Clicked="Handle_Clicked2"></Button>
 
                     <Button x:Name="b3" Text="Menu Item 3" BackgroundColor="LightSeaGreen" Clicked="Handle_Clicked3"></Button>
 
