Adaugat partea cu json

--- a/XamarinApp/XamarinApp/Pages/Page3.xaml
+++ b/XamarinApp/XamarinApp/Pages/Page3.xaml
@@ -2,12 +2,25 @@
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="XamarinApp.Page3"
-             Title="Pagina3">
-    <ContentPage.Content>
-        <StackLayout>
-            <Label Text="Welcome to Xamarin.Forms!"
-                VerticalOptions="CenterAndExpand" 
-                HorizontalOptions="CenterAndExpand" />
-        </StackLayout>
-    </ContentPage.Content>
+             Title="Restaurante">
+    <ListView x:Name="ProductsListView">
+        <ListView.ItemTemplate>
+            <DataTemplate>
+                <ViewCell>
+                    <StackLayout Orientation="Horizontal">
+                        <Label Text="{Binding RestaurantName}" TextColor="Black"></Label>
+                        <Label Text="{Binding Address}" TextColor="Black" ></Label>
+
+                        <!-- <Button Command="{Binding Website}" /> -->
+                        <!-- <Label Text="{Binding Website}" TextColor="Black" ></Label> -->
+                        <Label Text="{Binding Address}">
+                            <Label.GestureRecognizers>
+                                <TapGestureRecognizer Tapped="OnTapGestureRecognizerTapped" NumberOfTapsRequired="1" />
+                            </Label.GestureRecognizers>
+                        </Label>
+                    </StackLayout>
+                </ViewCell>
+            </DataTemplate>
+        </ListView.ItemTemplate>
+    </ListView>
 </ContentPage>
