--- a/XamarinApp/XamarinApp/MainPage.xaml
+++ b/XamarinApp/XamarinApp/MainPage.xaml
@@ -18,7 +18,7 @@
 
                     <Button x:Name="b2" Text="Italian Recipes" BackgroundColor="LightYellow" Clicked="Handle_Clicked2"></Button>
 
-                    <Button x:Name="b3" Text="Menu Item 3" BackgroundColor="LightSeaGreen" Clicked="Handle_Clicked3"></Button>
+                    <Button x:Name="b3" Text="Restaurante" BackgroundColor="LightSeaGreen" Clicked="Handle_Clicked3"></Button>
 
                     <Button x:Name="b4" Text="Menu Item 4" BackgroundColor="LightSkyBlue" Clicked="Handle_Clicked4"></Button>
 
