--- a/XamarinApp/XamarinApp/Pages/Page3.xaml
+++ b/XamarinApp/XamarinApp/Pages/Page3.xaml
@@ -13,9 +13,9 @@
 
                         <!-- <Button Command="{Binding Website}" /> -->
                         <!-- <Label Text="{Binding Website}" TextColor="Black" ></Label> -->
-                        <Label Text="{Binding Address}">
+                        <Label Text="{Binding Website}">
                             <Label.GestureRecognizers>
-                                <TapGestureRecognizer Tapped="OnTapGestureRecognizerTapped" NumberOfTapsRequired="1" />
+                                <!--<TapGestureRecognizer Tapped="" NumberOfTapsRequired="1" /> -->
                             </Label.GestureRecognizers>
                         </Label>
                     </StackLayout>
