--- a/XamarinApp/XamarinApp/Pages/ListViewModel.xaml
+++ b/XamarinApp/XamarinApp/Pages/ListViewModel.xaml
@@ -1,12 +1,29 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             x:Class="XamarinApp.Pages.ListViewModel">
-    <ContentPage.Content>
-        <StackLayout>
-            <Label Text="Welcome to Xamarin.Forms!"
-                VerticalOptions="CenterAndExpand" 
-                HorizontalOptions="CenterAndExpand" />
-        </StackLayout>
-    </ContentPage.Content>
+             x:Class="XamarinApp.Pages.ListViewModel"
+             Title="Recipes">
+
+    <ListView   ItemsSource="{Binding RecipeList}"
+                CachingStrategy="RecycleElement"
+                HasUnevenRows="True"
+                SelectedItem="{Binding SelectedRecipe}"
+                x:Name="listView">
+        
+        <ListView.ItemTemplate>
+            <DataTemplate>
+                <ViewCell>
+                    <StackLayout Padding="5">
+                        <Label Text="{Binding RecipeTitle}"
+                               FontSize="Medium"
+                               TextColor="Orange"/>
+
+                        <Label Text="{Binding RecipeCookingTime}"
+                               FontSize="Small"/>
+                    </StackLayout>
+                </ViewCell>
+            </DataTemplate>
+        </ListView.ItemTemplate>
+
+    </ListView>
 </ContentPage>
