--- a/XamarinApp/XamarinApp/Pages/Page4.xaml
+++ b/XamarinApp/XamarinApp/Pages/Page4.xaml
@@ -2,12 +2,13 @@
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="XamarinApp.Page4"
-             Title="Italian Restaurants">
+             Title="Italian Restaurants"
+             BackgroundColor="Yellow">
     <ContentPage.Content>
         <StackLayout>
             <Label Text="Welcome to Xamarin.Forms!"
                 VerticalOptions="CenterAndExpand" 
                 HorizontalOptions="CenterAndExpand" />
-        </StackLayout>
-    </ContentPage.Content>
+        </StackLayout> 
+    </ContentPage.Content> 
 </ContentPage>
