--- a/XamarinApp/XamarinApp/MainPage.xaml
+++ b/XamarinApp/XamarinApp/MainPage.xaml
@@ -11,20 +11,18 @@
         <ContentPage Padding="10" BackgroundColor="LightCoral" Title="Master" >
             <ContentPage.Content>
                 <StackLayout Margin="5,30,5,5">
-                    <Label Text="Bine ati venit!">
-                    </Label>
 
-                    <Button x:Name="b1" Text="Menu Item 1" BackgroundColor="LightBlue" Clicked="Handle_Clicked"></Button>
+                    <Button x:Name="b1" Text="Editor's choice" BackgroundColor="LightBlue" Clicked="Handle_Clicked"></Button>
 
                     <Button x:Name="b2" Text="Italian Recipes" BackgroundColor="LightYellow" Clicked="Handle_Clicked2"></Button>
 
-                    <Button x:Name="b3" Text="Restaurante" BackgroundColor="LightSeaGreen" Clicked="Handle_Clicked3"></Button>
+                    <Button x:Name="b3" Text="Restaurants" BackgroundColor="LightSeaGreen" Clicked="Handle_Clicked3"></Button>
 
-                    <Button x:Name="b4" Text="Harta restaurante" BackgroundColor="LightSkyBlue" Clicked="Handle_Clicked4"></Button>
+                    <Button x:Name="b4" Text="Restaurants map" BackgroundColor="LightSkyBlue" Clicked="Handle_Clicked4"></Button>
 
-                    <Button x:Name="b5" Text="Menu Item 5" BackgroundColor="LightPink" Clicked="Handle_Clicked5"></Button>
+                    <Button x:Name="b5" Text="Cooking videos" BackgroundColor="LightPink" Clicked="Handle_Clicked5"></Button>
 
-                    <Button x:Name="b6" Text="Despre" BackgroundColor="LightSalmon"  Clicked="Handle_Clicked6"></Button>
+                    <Button x:Name="b6" Text="About" BackgroundColor="LightSalmon"  Clicked="Handle_Clicked6"></Button>
                 </StackLayout>
             </ContentPage.Content>
         </ContentPage>
