--- a/XamarinApp/XamarinApp/Pages/Page1.xaml
+++ b/XamarinApp/XamarinApp/Pages/Page1.xaml
@@ -2,7 +2,7 @@
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="XamarinApp.Page1"
-             Title="Pagina1"
+             Title="Editor's choice"
              x:Name="Pagina1">
 
     <ListView   ItemsSource="{Binding RecipeList}"
