--- a/XamarinApp/XamarinApp/MainPage.xaml
+++ b/XamarinApp/XamarinApp/MainPage.xaml
@@ -14,7 +14,7 @@
 
                     <Button x:Name="b1" Text="Editor's choice" BackgroundColor="LightBlue" Clicked="Handle_Clicked"></Button>
 
-                    <Button x:Name="b2" Text="Italian Recipes" BackgroundColor="LightYellow" Clicked="Handle_Clicked2"></Button>
+                    <Button x:Name="b2" Text="Add your own Recipes" BackgroundColor="LightYellow" Clicked="Handle_Clicked2"></Button>
 
                     <Button x:Name="b3" Text="Restaurants" BackgroundColor="LightSeaGreen" Clicked="Handle_Clicked3"></Button>
 
