--- a/XamarinApp/XamarinApp/Pages/Page2.xaml
+++ b/XamarinApp/XamarinApp/Pages/Page2.xaml
@@ -2,24 +2,27 @@
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="XamarinApp.Page2"
-             Title="Test Page2">
+             Title="Add your own recipe ideas!">
     <ContentPage.Content>
-        <ScrollView>
+        <ScrollView
+            VerticalOptions ="Fill">
             <StackLayout
-            Spacing="10"
-            Padding="20">
+                HorizontalOptions="FillAndExpand"
+                                VerticalOptions="FillAndExpand"
+            Spacing="5"
+            Padding="10">
             <Button
             Text="Add Recipe"
             TextColor="White"
             BackgroundColor="DodgerBlue"
-            FontSize="22"
+            FontSize="24"
             Clicked="Handle_Add_RecipeAsync"
             />
             <Button
             Text="Refresh"
             TextColor="White"
-            BackgroundColor="Fuchsia"
-            FontSize="22"
+            BackgroundColor="Orange"
+            FontSize="24"
             Command="{Binding RefreshCommand}"
             />
             
@@ -28,22 +31,34 @@
                       BackgroundColor="#ecf0f1"
                       SeparatorVisibility="None"
                       HorizontalOptions="FillAndExpand"
-                      VerticalOptions="FillAndExpand">
+                      VerticalOptions="FillAndExpand"
+                      >
                 <ListView.ItemTemplate>
                     <DataTemplate>
-                        <ViewCell>
-                            <StackLayout
-                                Margin="6,4,6,4">
-                                <Label Text="{Binding RecipeTitle}" 
+                            <ViewCell>
+                                <StackLayout   
+                                Margin="6,4,6,4"
+                                HorizontalOptions="FillAndExpand"
+                                VerticalOptions="FillAndExpand"
+                                  >
+                                    <Label Text="{Binding RecipeTitle}" 
                                        Margin="8"
                                        FontAttributes="Bold"
                                        FontSize="Medium"></Label>
-                                <Label Text="{Binding RecipeCookingTime}"
+                                    <Label Text="{Binding RecipeCookingTime, StringFormat='Cooking time: {0}  minutes'} "
                                        Margin="8,2,8,4"
+                                       FontAttributes="Italic"
+                                       FontSize="Small"></Label>
+                                    <Label Text="{Binding RecipeCalories, StringFormat='Total calories: {0}  kcal'} " 
+                                       Margin="8"
+                                       FontAttributes="Italic"
+                                       FontSize="Medium"></Label>
+                                    <Label Text="{Binding RecipeText, StringFormat='Directions: {0}  '} " 
+                                       Margin="8"
                                        FontAttributes="Bold"
                                        FontSize="Small"></Label>
-                            </StackLayout>
-                        </ViewCell>
+                                </StackLayout>
+                            </ViewCell>
                     </DataTemplate>
                 </ListView.ItemTemplate>
             </ListView>
