--- a/XamarinApp/XamarinApp/Pages/Page3.xaml
+++ b/XamarinApp/XamarinApp/Pages/Page3.xaml
@@ -2,7 +2,7 @@
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="XamarinApp.Page3"
-             Title="Restaurante">
+             Title="Restaurants">
     <ListView x:Name="ProductsListView">
         <ListView.ItemTemplate>
             <DataTemplate>
