--- a/XamarinApp/XamarinApp/Pages/Page5.xaml
+++ b/XamarinApp/XamarinApp/Pages/Page5.xaml
@@ -2,7 +2,7 @@
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="XamarinApp.Page5"
-             Title="Pagina5">
+             Title="Cooking videos">
     <ContentPage.Content>
         <StackLayout>
             <!--<Label Text="Recipes for the season"
